--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "react-tooltip": "^5.27.1",
+    "react-tooltip": "^5.28.0",
+    "swiper": "^11.2.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "tooltip": "^1.6.1"
